# Serverless-Endpoints

./: .gitignore  Makefile  README.md  app.py  cdk.json
cdk_infrastructure/: __init__.py
source/endpoints/: handler.py  pyproject.toml  requirements.txt
source/endpoints/tests/: test_handler.py
