[tool.poetry]
name = "endpoints"
version = "0.1.0"
description = ""
authors = ["Eugene"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.83.0"
mangum = "^0.15.1"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
aws-lambda-powertools = "^1.29.1"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
